--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/styles/normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>Main</title>
@@ -17,10 +20,10 @@
                 <div class="header__left">
                     <div class="logo__container">
                         <a href='index.html'>
-                            <h1 class="logo">
+                            <p class="logo">
                                 PetStory <br>
                                 online
-                            </h1>
+                            </p>
                             <img src="../../assets/icons/logo-bamboo.svg" alt="bamboo" class="logo-bamboo">
                         </a>
                     </div>
@@ -76,7 +79,7 @@
                         </p>
                     </div>
                 </div>
-                <button class="button-round watch__button">
+                <button class="button button-round watch__button">
                     watch online
                 </button>
             </div>
@@ -88,7 +91,7 @@
                 <div class=" backstage__grid">
                 <img src="../../assets/images/bamboo-cap.png" alt="photo" class="backstage__photo">
                 <div class="backstage__text-container">
-                    <h3 class="backstage__title title">
+                    <h2 class="backstage__title">
                         The Backstage of the Wilderness World.
                     </h3>
                     <p class="backstage__text">
@@ -121,7 +124,7 @@
                             <h5 class="pets__item-title">
                                 giant Pandas
                             </h5>
-                            <p class="pets__item-text">
+                            <p class="small-paragraph">
                                 Native to Southwest China
                             </p>
                             <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
@@ -133,7 +136,7 @@
                             <h5 class="pets__item-title">
                                 eagles
                             </h5>
-                            <p class="pets__item-text">
+                            <p class="small-paragraph">
                                 Native to South America
                             </p>
                             <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
@@ -146,7 +149,7 @@
                             <h5 class="pets__item-title">
                                 gorillas
                             </h5>
-                            <p class="pets__item-text">
+                            <p class="small-paragraph">
                                 Native to Congo
                             </p>
                             <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
@@ -158,7 +161,7 @@
                             <h5 class="pets__item-title">
                                 Two-toed Sloth
                             </h5>
-                            <p class="pets__item-text">
+                            <p class="small-paragraph">
                                 Mesoamerica, South America
                             </p>
                             <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
@@ -170,7 +173,7 @@
                             <h5 class="pets__item-title">
                                 cheetahs
                             </h5>
-                            <p class="pets__item-text">
+                            <p class="small-paragraph">
                                 Native to Africa
                             </p>
                             <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
@@ -183,7 +186,7 @@
                             <h5 class="pets__item-title">
                                 penguins
                             </h5>
-                            <p class="pets__item-text">
+                            <p class="small-paragraph">
                                 Native to Antarctica
                             </p>
                             <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
@@ -196,7 +199,7 @@
                         →
                     </button>
                 </div>
-                <button class="button-round pets__button">
+                <button class="button button-round pets__button">
                     choose your favorite
                 </button>
                 <img class="flower2" src="../../assets/images/flower2.png"">
@@ -207,13 +210,13 @@
         <section class=" pick-and-feed">
                 <div class="wrapper">
                     <div class="pick-and-feed__container">
-                        <h3 class="pick-and-feed__title title">
+                        <h2 class="pick-and-feed__title">
                             Pick and feed a friend
                         </h3>
                         <h4 class="pick-and-feed__subtitle subtitle">
                             We know the animals bring you joy, and in these extraordinary times, we’re glad.
                         </h4>
-                        <p class="pick-and-feed__text text__bold">
+                        <p class="pick-and-feed__bold-text">
                             During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad
                             that people around the world find joy in PetStory.
                         </p>
@@ -226,7 +229,7 @@
                                 </span>
                             </a>
                         </p>
-                        <h4 class="pick-and-feed__small-title title">
+                        <h3 class="pick-and-feed__small-title">
                             How it works
                         </h4>
                         <div class="how-it-works__container">
@@ -267,7 +270,7 @@
                                 </p>
                             </div>
                         </div>
-                        <button class="button-round pick-and-feed__button">
+                        <button class="button button-round pick-and-feed__button">
                             Feed a friend now
                         </button>
                     </div>
@@ -277,9 +280,9 @@
         <section class="testimonials">
             <div class="wrapper">
                 <div class="testimonials__block">
-                    <h4 class="testimonials__small-title title">
+                    <h3 class="testimonials__small-title">
                         Testimonials
-                    </h4>
+                    </h3>
                     <div class="testimonials__container">
                         <div class="testimonials__item">
                             <div class="testimonials__info">
@@ -298,7 +301,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="testimonial__text">
+                            <p class="small-paragraph">
                                 The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
                                 zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
                                 son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
@@ -326,7 +329,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="testimonial__text">
+                            <p class="small-paragraph">
                                 Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve
                                 met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways
                                 to instill a love for animals.The best online zoo I’ve met. My son delighted very much
@@ -358,7 +361,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="testimonial__text">
+                            <p class="small-paragraph">
                                 The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
                                 zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
                                 son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
@@ -388,7 +391,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="testimonial__text">
+                            <p class="small-paragraph">
                                 My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
                                 instill a love for animals.The best online zoo I’ve met. My son delighted very much
                                 ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The
@@ -403,7 +406,7 @@
                         </div>
                     </div>
                     <input class='scrol' type="range" value="0" min="0" max="6">
-                    <button class="button-box testimonials__button">
+                    <button class="button button-box testimonials__button">
                         Leave feedback
                     </button>
                     <img src="../../assets/images/flower4.png" alt="flower" class="flower4">
@@ -418,24 +421,24 @@
             <div class="footer__top">
                 <div class="logo__container">
                     <a href='index.html'>
-                        <h1 class="logo">
+                        <p class="logo">
                             PetStory <br>
                             online
-                        </h1>
+                        </p>
                         <img src="../../assets/icons/logo-bamboo.svg" alt="bamboo" class="logo-bamboo">
                     </a>
                 </div>
                 <div class="footer__form-container">
-                    <div class="footer__subtitle subtitle">
+                    <p class="footer__subtitle subtitle">
                         Subscribe to our news
-                    </div>
+                    </p>
                     <form action="#" class="footer__container">
                         <input type="text" id="email" name="email" placeholder="Enter your email">
                         <input type="submit" id='submit' value="Submit">
                     </form>
                 </div>
             </div>
-            <button class="footer__button button-box">
+            <button class="button footer__button button-box">
                 donate for volunteers
             </button>
             <div class="footer__bottom">
