refactor section pick-and-feed and footer

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -301,7 +301,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="small-paragraph">
+                            <p class="small-paragraph testimonial__text">
                                 The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
                                 zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
                                 son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
@@ -329,7 +329,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="small-paragraph">
+                            <p class="small-paragraph testimonial__text">
                                 Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve
                                 met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways
                                 to instill a love for animals.The best online zoo I’ve met. My son delighted very much
@@ -361,7 +361,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="small-paragraph">
+                            <p class="small-paragraph testimonial__text">
                                 The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
                                 zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
                                 son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
@@ -391,7 +391,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="small-paragraph">
+                            <p class="small-paragraph testimonial__text">
                                 My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
                                 instill a love for animals.The best online zoo I’ve met. My son delighted very much
                                 ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The
@@ -433,7 +433,7 @@
                         Subscribe to our news
                     </p>
                     <form action="#" class="footer__container">
-                        <input type="text" id="email" name="email" placeholder="Enter your email">
+                        <input type="email" id="email" name="email" placeholder="Enter your email">
                         <input type="submit" id='submit' value="Submit">
                     </form>
                 </div>
@@ -510,10 +510,10 @@
                 </nav>
             </div>
             <div class="footer__info">
-                <p class="footer__text">
+                <p class="footer__text testimonial__text">
                     Designed by Alisa Samborskaya
                 </p>
-                <p class="footer__text">
+                <p class="footer__text testimonial__text">
                     ©RSSchool & ©Yem Digital 2021
                                 </p>
             </div>
