--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/styles/normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>Main</title>
@@ -15,18 +18,19 @@
         <div class="wrapper">
             <div class="header__nav">
                 <div class="header__left">
-                    <div class="header__logo">
-                        <a class="navigation__link" href='../main/index.html'>
-                            <h1 class="logo">
+                    <div class="logo__container">
+                        <a href='index.html'>
+                            <p class="logo">
                                 PetStory <br>
                                 online
-                            </h1>
+                            </p>
+                            <img src="../../assets/icons/logo-bamboo.svg" alt="bamboo" class="logo-bamboo">
                         </a>
                     </div>
                     <nav class="navigation">
                         <ul class="navigation__list">
                             <li class="navigation__item">
-                                <a class="navigation__link" href='../main/index.html'>
+                                <a class="navigation__link" href='index.html'>
                                     About
                                 </a>
                             </li>
@@ -41,7 +45,7 @@
                                 </a>
                             </li>
                             <li class="navigation__item">
-                                <a class="navigation__link" href='index.html'>
+                                <a class="navigation__link" href='../donate/index.html'>
                                     Donate
                                 </a>
                             </li>
@@ -61,7 +65,179 @@
             </div>
         </div>
     </header>
-    <script src="script.js"></script>
+    <main>
+        <section class="watch">
+            <div class="wrapper">
+                <div class="watch__photo">
+                </div>
+            </div>
+        </section>
+        <section class="pick-and-feed">
+            <div class="wrapper">
+                <h3 class="pick-and-feed__title">
+                    THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED HELP!
+                </h3>
+                <p class="pick-and-feed__text">
+                    Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational
+                    programs and public and private events cancelled or postponed for additional months. We need you now
+                    more than ever to help ensure that we overcome these challenges. We have been actively raising funds
+                    in the community, and we are grateful for the generosity. But much more support is still needed, and
+                    we need your help! Please consider a gift today – no matter what size – to help us sustain our
+                    mission.
+                </p>
+                <h3 class="pick-and-feed__title info__title orange-title">
+                    Donation Information
+                </h3>
+                <div class="pick__container">
+                    <h2 class="pick__title orange-title">
+                        Pick and feed a friend
+                    </h2>
+                    <p class="pick__subtitle subtitle">
+                        We know the animals bring you joy, and in these extraordinary times, we’re glad.
+                    </p>
+                    <div class="animal__amount-container">
+                        <div class="animal-amount__text">
+                            <p class="big-number">4</p>
+                            <p>Panda diet for the day.</p>
+                        </div>
+                        <img src="../../assets/icons/x_icon.svg" alt="x_icon" class="x-icon">
+                        <img src="../../assets/icons/panda.svg" alt="panda" class="animal-amount__photo">
+                    </div>
+                    <p>
+                        Amount
+                    </p>
+                    <form>
+                        <input class='scrol' type="range" value="0" min="0" max="7" step="1" list="sum">
+                        <div class="periodicity">
+                            <input class='radio' type="radio" id="periodicityChoice1" name="periodicity" value="monthly" checked>
+                            <label class='radio__label' for="periodicityChoice1">Monthly</label>
+                            <input class='radio' type="radio" id="periodicityChoice2" name="periodicity" value="once">
+                            <label class='radio__label' for="periodicityChoice2">Once</label>
+                        </div>
+                        <button class="button button-round pick__button">
+                            Feed a friend now
+                        </button>
+                    </form>
+                    <p class="pick__text">Share with your friends on social networks </p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__top">
+                <div class="logo__container">
+                    <a href='index.html'>
+                        <p class="logo">
+                            PetStory <br>
+                            online
+                        </p>
+                        <img src="../../assets/icons/logo-bamboo.svg" alt="bamboo" class="logo-bamboo">
+                    </a>
+                </div>
+                <div class="footer__form-container">
+                    <p class="footer__subtitle subtitle">
+                        Subscribe to our news
+                    </p>
+                    <form class="footer__container">
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                        <input type="submit" id='submit' value="Submit">
+                    </form>
+                </div>
+            </div>
+            <button class="button footer__button button-box">
+                donate for volunteers
+            </button>
+            <div class="footer__bottom">
+                <div class="networks">
+                    <ul class="networks__list">
+                        <li class="networks__item">
+                            <a href="#">
+                                <div class="network__icon">
+                                    <img src="../../assets/icons/fb.svg" alt="facebook" class="network__pic">
+                                </div>
+                                <p class="network__text">
+                                    Facebook
+                                </p>
+                            </a>
+                        </li>
+                        <li class="networks__item">
+                            <a href="#">
+                                <div class="network__icon">
+                                    <img src="../../assets/icons/tw.svg" alt="twitter" class="network__pic">
+                                </div>
+                                <p class="network__text">
+                                    Twitter
+                                </p>
+                            </a>
+                        </li>
+                        <li class="networks__item">
+                            <a href="#">
+                                <div class="network__icon">
+                                    <img src="../../assets/icons/ig.svg" alt="instagram" class="network__pic">
+                                </div>
+                                <p class="network__text">
+                                    Instagram
+                                </p>
+                            </a>
+                        </li>
+                        <li class="networks__item">
+                            <a href="#">
+                                <div class="network__icon">
+                                    <img src="../../assets/icons/yt.svg" alt="youtube" class="network__pic">
+                                </div>
+                                <p class="network__text">
+                                    Youtube
+                                </p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__navigation">
+                    <nav class="navigation">
+                        <ul class="navigation__list">
+                            <li class="navigation__item">
+                                <a class="navigation__link" href='index.html'>
+                                    About
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">
+                                    Map
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">
+                                    Zoos
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href='../donate/index.html'>
+                                    Donate
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">
+                                    Contact us
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footer__info">
+                    <p class="footer__text testimonial__text">
+                        Designed by Alisa Samborskaya
+                    </p>
+                    <p class="footer__text testimonial__text">
+                        ©RSSchool & ©Yem Digital 2021
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src=" script.js"></script>
 </body>
 
 </html>
