refactor desktop version of main page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -62,6 +62,11 @@
                         <p class="credit">Designed by ©</p>
                     </a>
                 </div>
+                <div class="burger">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                </div>
             </div>
         </div>
     </header>
