--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -30,7 +30,7 @@
                     <nav class="navigation">
                         <ul class="navigation__list">
                             <li class="navigation__item">
-                                <a class="navigation__link" href='index.html'>
+                                <a class="navigation__link" href='../main/index.html'>
                                     About
                                 </a>
                             </li>
