--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -247,7 +247,6 @@
                                     </p>
                                 </div>
                                 <div class="container__item container__arrow">
-                                    <img src="../../assets/images/arrow.svg" alt="arrow" class="container__arrow">
                                 </div>
                                 <div class="container__item">
                                     <div class="item__photo">
@@ -258,7 +257,6 @@
                                     </p>
                                 </div>
                                 <div class="container__item container__arrow">
-                                    <img src="../../assets/images/arrow.svg " alt="arrow" class="container__arrow">
                                 </div>
                                 <div class="container__item">
                                     <div class="item__photo">
@@ -529,7 +527,7 @@
                 </div>
                 <div class="footer__navigation">
                     <nav class="navigation">
-                        <ul class="navigation__list">
+                        <ul class="navigation__list navigation__list-footer">
                             <li class="navigation__item navigation__item-footer">
                                 <a class="navigation__link" href='index.html'>
                                     About
