add adaptivity to donation page

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -27,7 +27,7 @@
                             <img src="../../assets/icons/logo-bamboo.svg" alt="bamboo" class="logo-bamboo">
                         </a>
                     </div>
-                    <nav class="navigation">
+                    <nav class="navigation-desktop">
                         <ul class="navigation__list">
                             <li class="navigation__item">
                                 <a class="navigation__link" href='../main/index.html'>
@@ -62,6 +62,11 @@
                         <p class="credit">Designed by ©</p>
                     </a>
                 </div>
+                <div class="burger">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                </div>
             </div>
         </div>
     </header>
@@ -74,7 +79,7 @@
         </section>
         <section class="pick-and-feed">
             <div class="wrapper">
-                <h3 class="pick-and-feed__title">
+                <h3 class="pick-and-feed__title subtitle">
                     THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED HELP!
                 </h3>
                 <p class="pick-and-feed__text">
@@ -98,12 +103,12 @@
                     <div class="animal__amount-container">
                         <div class="animal-amount__text">
                             <p class="big-number">4</p>
-                            <p>Panda diet for the day.</p>
+                            <p class="animal-amount__text">Panda diet for the day.</p>
                         </div>
                         <img src="../../assets/icons/x_icon.svg" alt="x_icon" class="x-icon">
                         <img src="../../assets/icons/panda.svg" alt="panda" class="animal-amount__photo">
                     </div>
-                    <p>
+                    <p class="amount__title">
                         Amount
                     </p>
                     <form class="animal-amount__form">
@@ -151,7 +156,7 @@
             <div class="footer__top">
                 <div class="logo__container">
                     <a href='index.html'>
-                        <p class="logo">
+                        <p class="logo footer__logo">
                             PetStory <br>
                             online
                         </p>
@@ -218,28 +223,28 @@
                 </div>
                 <div class="footer__navigation">
                     <nav class="navigation">
-                        <ul class="navigation__list">
-                            <li class="navigation__item">
+                        <ul class="navigation__list navigation__list-footer">
+                            <li class="navigation__item navigation__item-footer">
                                 <a class="navigation__link" href='index.html'>
                                     About
                                 </a>
                             </li>
-                            <li class="navigation__item">
+                            <li class="navigation__item navigation__item-footer">
                                 <a class="navigation__link" href="#">
                                     Map
                                 </a>
                             </li>
-                            <li class="navigation__item">
+                            <li class="navigation__item navigation__item-footer">
                                 <a class="navigation__link" href="#">
                                     Zoos
                                 </a>
                             </li>
-                            <li class="navigation__item">
+                            <li class="navigation__item navigation__item-footer">
                                 <a class="navigation__link" href='../donate/index.html'>
                                     Donate
                                 </a>
                             </li>
-                            <li class="navigation__item">
+                            <li class="navigation__item navigation__item-footer">
                                 <a class="navigation__link" href="#">
                                     Contact us
                                 </a>
@@ -248,10 +253,10 @@
                     </nav>
                 </div>
                 <div class="footer__info">
-                    <p class="footer__text testimonial__text">
+                    <p class="footer__text">
                         Designed by Alisa Samborskaya
                     </p>
-                    <p class="footer__text testimonial__text">
+                    <p class="footer__text">
                         ©RSSchool & ©Yem Digital 2021
                     </p>
                 </div>
