--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -112,8 +112,8 @@
                         Amount
                     </p>
                     <form class="animal-amount__form">
-                          <label for="range">
-                        <input class='scrol' type="range" name="range" id="range"  min="25" max="200" step="25">
+                        <label for="range">
+                            <input class='scrol' type="range" name="range" id="range" min="25" max="200" step="25">
                         </label>
                         <div class="range__values">
                             <p class="range__value">$200</p>
@@ -124,23 +124,25 @@
                             <p class="range__value">$75</p>
                             <p class="range__value">$50</p>
                             <p class="range__value">$25</p>
-                            </div>
+                        </div>
                         <div class="another-amount">
-                        <input class='amount__input' type="number" placeholder="Another amount" max="9999">
-                        <img class="dollar-sign" src="../../assets/icons/dollar.svg">
-                        </img>
-                    </div>
+                            <input class='amount__input' type="number" placeholder="Another amount" max="9999">
+                            <img class="dollar-sign" src="../../assets/icons/dollar.svg">
+                            </img>
+                        </div>
                         <div class="periodicity">
                             <div class="periodicity__item">
-                            <input class='radio' type="radio" id="periodicityChoice1" name="periodicity" value="monthly">
-                            <label class='radio__label' for="periodicityChoice1">Monthly</label>
-                        </div>
-                        <div class="periodicity__item">
-                            <input class='radio' type="radio" id="periodicityChoice2" name="periodicity" value="once" checked>
-                            <label class='radio__label' for="periodicityChoice2">Once</label>
+                                <input class='radio' type="radio" id="periodicityChoice1" name="periodicity"
+                                    value="monthly">
+                                <label class='radio__label' for="periodicityChoice1">Monthly</label>
+                            </div>
+                            <div class="periodicity__item">
+                                <input class='radio' type="radio" id="periodicityChoice2" name="periodicity"
+                                    value="once" checked>
+                                <label class='radio__label' for="periodicityChoice2">Once</label>
                             </div>
                         </div>
-                                            <button class="button button-round pick__button">
+                        <button class="button button-round pick__button">
                             Feed a friend now
                         </button>
                     </form>
