add validation to form

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -472,8 +472,8 @@
                         Subscribe to our news
                     </p>
                     <form class="footer__container">
-                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
-                        <input type="submit" id='submit' value="Submit">
+                        <input type="email" class='email' id="email" name="email" placeholder="Enter your email" required>
+                        <input type="submit" id='submit-email' value="Submit" class="email-submit">
                     </form>
                 </div>
             </div>
