--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="shadow"></div>
     <header class="header">
         <div class="wrapper">
             <div class="header__nav">
