add slider of pets

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -14,13 +14,12 @@
 </head>
 
 <body>
-    <div class="shadow"></div>
     <header class="header">
         <div class="wrapper">
             <div class="header__nav">
                 <div class="header__left">
                     <div class="logo__container">
-                        <a href='index.html'>
+                        <a href='../main/index.html'>
                             <p class="logo">
                                 PetStory <br>
                                 online
