--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -123,7 +123,7 @@
                     </button>
                 </div>
                 <div class="pets__grid">
-                    <div class="pets__item">
+                    <div class="pets__item fade">
                         <img src="../../assets/images/pets1.png" alt="pet" class="pets__item-img">
                         <div class="pets__text">
                             <h5 class="pets__item-title">
@@ -135,7 +135,7 @@
                             <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
                         </div>
                     </div>
-                    <div class="pets__item">
+                    <div class="pets__item fade">
                         <img src="../../assets/images/pets2.png" alt="pet" class="pets__item-img">
                         <div class="pets__text">
                             <h5 class="pets__item-title">
@@ -148,7 +148,7 @@
                                 class="pets__icon meet-fish__icon">
                         </div>
                     </div>
-                    <div class="pets__item">
+                    <div class="pets__item fade" >
                         <img src="../../assets/images/pets3.png" alt="pet" class="pets__item-img">
                         <div class="pets__text">
                             <h5 class="pets__item-title">
@@ -160,7 +160,7 @@
                             <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
                         </div>
                     </div>
-                    <div class="pets__item">
+                    <div class="pets__item fade">
                         <img src="../../assets/images/pets4.png" alt="pet" class="pets__item-img">
                         <div class="pets__text">
                             <h5 class="pets__item-title">
@@ -172,7 +172,7 @@
                             <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
                         </div>
                     </div>
-                    <div class="pets__item">
+                    <div class="pets__item fade">
                         <img src="../../assets/images/pets5.png" alt="pet" class="pets__item-img">
                         <div class="pets__text">
                             <h5 class="pets__item-title">
@@ -185,7 +185,7 @@
                                 class="pets__icon meet-fish__icon">
                         </div>
                     </div>
-                    <div class="pets__item">
+                    <div class="pets__item fade">
                         <img src="../../assets/images/pets6.png" alt="pet" class="pets__item-img">
                         <div class="pets__text">
                             <h5 class="pets__item-title">
@@ -193,6 +193,31 @@
                             </h5>
                             <p class="small-paragraph">
                                 Native to Antarctica
+                            </p>
+                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
+                                class="pets__icon meet-fish__icon">
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img src="../../assets/images/pets1.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                giant Pandas
+                            </h5>
+                            <p class="small-paragraph">
+                                Native to Southwest China
+                            </p>
+                            <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
+                        </div>
+                    </div>
+                    <div class="pets__item fade">
+                        <img src="../../assets/images/pets2.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                eagles
+                            </h5>
+                            <p class="small-paragraph">
+                                Native to South America
                             </p>
                             <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
                                 class="pets__icon meet-fish__icon">
