add validation to donate input

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -126,7 +126,7 @@
                             <p class="range__value">$25</p>
                         </div>
                         <div class="another-amount">
-                            <input class='amount__input' type="number" placeholder="Another amount" max="9999">
+                            <input class='amount__input' max="9999" type="number" placeholder="Another amount" max="9999">
                             <img class="dollar-sign" src="../../assets/icons/dollar.svg">
                             </img>
                         </div>
