fix arrows in pets section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -117,11 +117,6 @@
 
         <section class="pets">
             <div class="wrapper">
-                <div class="arrow-left">
-                    <button class="arrow__button-left">
-                        ←
-                    </button>
-                </div>
                 <div class="pets__grid">
                     <div class="pets__item fade">
                         <img src="../../assets/images/pets1.png" alt="pet" class="pets__item-img">
@@ -224,14 +219,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="arrow-right">
-                    <button class="arrow__button-right">
-                        →
+                <div class="arrows__container">
+                <div class="arrow-left">
+                    <button class="arrow__button-left">
+                        ←
                     </button>
                 </div>
                 <button class="button button-round pets__button">
                     choose your favorite
                 </button>
+                <div class="arrow-right">
+                    <button class="arrow__button-right">
+                        →
+                    </button>
+                </div>
+            </div>
                 <img class="flower2" src="../../assets/images/flower2.png"">
                 <img class=" flower3" src="../../assets/images/flower3.png"">
             </div>
